-Se corrigen, generalizan e implementan nuevos estilos. -Se corrigen errores de visualización y lógica.

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
                 "node_modules/materialize-css"
               ]
             },            
-            "scripts": []
+            "scripts": [
+              "node_modules/materialize-css/dist/js/materialize.min.js"
+            ]
           },
           "configurations": {
             "production": {
