--- a/firebase.json
+++ b/firebase.json
@@ -3,9 +3,7 @@
     {
       "target": "juego-amigo-navideno",
       "public": "dist/juego-amigo-navideno",
-      "ignore": [
-        "**/.*"
-      ],
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
       "headers": [
         {
           "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
